syntax = "proto3";

option csharp_namespace = "GrpcClientApp";

package employee;

service Employee {
	rpc GetEmpInformation (GetEmpDetail) returns (EmpModel);
}

message GetEmpDetail{
	int32 empId = 1;
}

message EmpModel{
	string empName = 1;
	string empEmail = 2;
	string empRole = 3;
	string empDepartment = 4;
}
